--- a/kotlin-source/build.gradle
+++ b/kotlin-source/build.gradle
@@ -71,9 +71,9 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
     directory "./build/nodes"
-    networkMap "O=Controller,L=London,C=GB"
+    networkMap "O=Notary,L=London,C=GB"
     node {
-        name "O=Controller,L=London,C=GB"
+        name "O=Notary,L=London,C=GB"
         advertisedServices = ["corda.notary.validating"]
         p2pPort 10002
         rpcPort 10003
