--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
-    ext.corda_release_version = '1.0.0'
-    ext.corda_gradle_plugins_version = '1.0.0'
+    ext.corda_release_group = 'net.corda'
+    ext.corda_release_version = '2.0.0'
+    ext.corda_gradle_plugins_version = '3.1.0'
     ext.kotlin_version = '1.3.11'
-    ext.quasar_version = '0.7.6'
     ext.junit_version = '4.12'
+    ext.quasar_version = '0.7.9'
 
     repositories {
         mavenLocal()
@@ -13,14 +14,8 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "net.corda.plugins:cordapp:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:cordformation:$corda_gradle_plugins_version"
         classpath "net.corda.plugins:quasar-utils:$corda_gradle_plugins_version"
     }
-}
-
-repositories {
-    mavenLocal()
-    jcenter()
-    mavenCentral()
-    maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases' }
 }
