--- a/kotlin-source/build.gradle
+++ b/kotlin-source/build.gradle
@@ -2,14 +2,16 @@ repositories {
     mavenLocal()
     jcenter()
     mavenCentral()
-    maven { url 'https://dl.bintray.com/kotlin/exposed' }
+    maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda' }
     maven { url 'https://jitpack.io' }
-    maven { url 'https://ci-artifactory.corda.r3cev.com/artifactory/corda-releases' }
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'net.corda.plugins.cordapp'
 apply plugin: 'net.corda.plugins.cordformation'
 apply plugin: 'net.corda.plugins.quasar-utils'
+
+jar.baseName = "scenario-2-commercialpaper"
 
 sourceSets {
     main {
@@ -26,7 +28,7 @@ sourceSets {
         kotlin {
             compileClasspath += main.output + test.output
             runtimeClasspath += main.output + test.output
-            srcDir file('src/integrationTest/kotlin')
+            srcDir file('src/integration-test/kotlin')
         }
     }
 }
@@ -42,22 +44,24 @@ dependencies {
     testCompile "junit:junit:$junit_version"
 
     // Corda integration dependencies
-    cordaCompile "net.corda:corda-core:$corda_release_version"
-    cordaCompile "net.corda:corda-finance:$corda_release_version"
-    cordaCompile "net.corda:corda-jackson:$corda_release_version"
-    cordaCompile "net.corda:corda-rpc:$corda_release_version"
-    cordaCompile "net.corda:corda-webserver-impl:$corda_release_version"
-    cordaRuntime "net.corda:corda:$corda_release_version"
-    cordaRuntime "net.corda:corda-webserver:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-core:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-finance:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-jackson:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-rpc:$corda_release_version"
+    cordaCompile "$corda_release_group:corda-webserver-impl:$corda_release_version"
+    cordaRuntime "$corda_release_group:corda:$corda_release_version"
+    cordaRuntime "$corda_release_group:corda-webserver:$corda_release_version"
 
-    testCompile "net.corda:corda-node-driver:$corda_release_version"
-
-    // PlantUML: For the generation of sequence diagrams of the flows
-    compile 'net.sourceforge.plantuml:plantuml:8039'
+    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
 
     // CorDapp dependencies
     // Specify your cordapp's dependencies below, including dependent CorDapps
-    cordapp "net.corda:corda-finance:$corda_release_version"
+    cordapp "$corda_release_group:corda-finance:$corda_release_version"
+}
+
+task integrationTest(type: Test, dependsOn: []) {
+    testClassesDirs = sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
@@ -71,39 +75,49 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
 
 task deployNodes(type: net.corda.plugins.Cordform, dependsOn: ['jar']) {
     directory "./build/nodes"
-    networkMap "O=Notary,L=London,C=GB"
     node {
         name "O=Notary,L=London,C=GB"
-        advertisedServices = ["corda.notary.validating"]
-        p2pPort 10002
-        rpcPort 10003
-        cordapps = ["net.corda:corda-finance:$corda_release_version"]
+        notary = [validating : false]
+        p2pPort 10006
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
     }
     node {
         name "O=PartyA,L=London,C=GB"
-        advertisedServices = []
-        p2pPort 10005
-        rpcPort 10006
-        webPort 10007
-        cordapps = ["net.corda:corda-finance:$corda_release_version"]
-        rpcUsers = [[ user: "user1", "password": "test", "permissions": []]]
+        p2pPort 10007
+        rpcSettings {
+            address("localhost:10008")
+            adminAddress("localhost:10048")
+        }
+        webPort 10009
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
+        rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
     node {
         name "O=PartyB,L=New York,C=US"
-        advertisedServices = []
-        p2pPort 10008
-        rpcPort 10009
-        webPort 10010
-        cordapps = ["net.corda:corda-finance:$corda_release_version"]
-        rpcUsers = [[ user: "user1", "password": "test", "permissions": []]]
+        p2pPort 10010
+        rpcSettings {
+            address("localhost:10011")
+            adminAddress("localhost:10051")
+        }
+        webPort 10012
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
+        rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
     node {
         name "O=PartyC,L=Paris,C=FR"
-        advertisedServices = []
-        p2pPort 10011
-        rpcPort 10012
-        webPort 10013
-        cordapps = ["net.corda:corda-finance:$corda_release_version"]
-        rpcUsers = [[ user: "user1", "password": "test", "permissions": []]]
+        p2pPort 10013
+        rpcSettings {
+            address("localhost:10014")
+            adminAddress("localhost:10054")
+        }
+        webPort 10015
+        cordapps = ["$corda_release_group:corda-finance:$corda_release_version"]
+        rpcUsers = [[user: "user1", "password": "test", "permissions": ["ALL"]]]
     }
+}
+
+task runAuctionClientRPCKotlin(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'com.example.client.AuctionClientRPCKt'
+    args 'localhost:10008'
 }
